--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,37 @@
 alembic==0.8.7
+asn1crypto==0.22.0
 bcrypt==3.1.0
+certifi==2017.7.27.1
 cffi==1.7.0
+chardet==3.0.4
 click==6.6
 coverage==4.2
+cryptography==2.0.3
+enum34==1.1.6
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
 Flask-Testing==0.5.0
 GitHub-Flask==3.1.3
 gunicorn==19.6.0
+idna==2.6
+ipaddress==1.0.18
 itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
 mysql-connector==2.1.4
+paypalrestsdk==1.13.1
 psycopg2==2.7.1
 py==1.4.31
 py-bcrypt==0.4
 pycparser==2.14
+pyOpenSSL==17.2.0
 pytest==3.0.1
 pytest-cov==2.3.1
 pytest-flask==0.10.0
 python-editor==1.0.1
 requests==2.11.1
 six==1.10.0
+SQLAlchemy==1.1.14
+urllib3==1.22
 Werkzeug==0.11.10
