--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ cryptography==2.0.3
 enum34==1.1.6
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
+Flask-Migrate==2.1.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.2
 Flask-Testing==0.5.0
 GitHub-Flask==3.1.3
 gunicorn==19.6.0
@@ -30,6 +33,7 @@ pytest==3.0.1
 pytest-cov==2.3.1
 pytest-flask==0.10.0
 python-editor==1.0.1
+redis==2.10.6
 requests==2.11.1
 six==1.10.0
 SQLAlchemy==1.1.14
