--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.8.7
 asn1crypto==0.22.0
 bcrypt==3.1.0
+braintree==3.38.0
 certifi==2017.7.27.1
 cffi==1.7.0
 chardet==3.0.4
@@ -23,10 +24,12 @@ Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
 mysql-connector==2.1.4
+ndg-httpsclient==0.4.3
 paypalrestsdk==1.13.1
 psycopg2==2.7.1
 py==1.4.31
 py-bcrypt==0.4
+pyasn1==0.3.4
 pycparser==2.14
 pyOpenSSL==17.2.0
 pytest==3.0.1
@@ -37,5 +40,6 @@ redis==2.10.6
 requests==2.11.1
 six==1.10.0
 SQLAlchemy==1.1.14
+stripe==1.65.0
 urllib3==1.22
 Werkzeug==0.11.10
